3.5.3
-----
1. Update translations.
2. Dim more player details in 'Manage players' dialog for switched off
   players.
3. Fix now-playing covers for old browsers (e.g. old iOS) that don't support
   CSS min()
4. Change "Perfomed by" to "performed by", etc.
5. Fix showing multiple composers, etc, in MAI view.
6. Fix cover URL in MAI.
7. Fix HTML appearing in disc selection dialog.

3.5.2
-----
1. Revert back to "img" tags for no-playing images, resolves loading of plugin
   PNGs.
2. Ensure no repeated textkeys (apart from years).
3. Adjust grid view margins, thanks to Denys Lysiuk.
4. Remove now-playing shadow.
5. Fix showing artist first or last with context.

3.5.1
-----
1. Display replaygain value even if positive or zero.
2. Only use 2 decimal places for replaygain.
3. Fix missing bitrate from tech info.
4. Don't allow to expand now-playing if nothing playing.
5. Treat covers in queue as per now-playing, i.e. don't clip and add
   background if required.
6. Use material icons for tracks note and selection count checkbox instead of
   unicode characters.
7. Only show current track's replaygain value if it's non-zero.
8. Only show artist context (e.g. XX From YY) for local, Deezer, Spotify,
   Tidal, Qobuz, or Radio Paradise tracks.
9. Only use mobile-scroll hack for Android and iOS.

3.5.0
-----
 1. Add setting to toggle rounded covers.
 2. If run under LMS8.4 (or newer) allow editing playlists up to 1k tracks.
 3. Only ask LMS for genre details when listing album and playlist tracks if
    set to show band, composer, or conductor.
 4. Add ability to edit favourite icons, thanks to wizmo2
 5. Remove SVG filtering for now-playing covers, and use plain CSS.
 6. Don't show bitrate, samplesize, or samplerate if 0.
 7. Add callback for when accent colour changes due to cover.
 8. Try to interpret back button as go back for all browsers.
 9. When browsing tracks place duration on right, as per queue.